--- a/templates/administracion.html
+++ b/templates/administracion.html
@@ -24,7 +24,7 @@
                 <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-user bigicon"></i></span>
                 <div class="col-md-8">
                   Descripci&oacute;n:
-                    <textarea id="description"  name="description" type="text" value="{{ config.description }}" class="form-control" required > </textarea>
+                    <textarea id="description"  name="description" type="text" class="form-control" required > {{ config.description }} </textarea>
                 </div>
               </div>
             </fieldset>
