--- a/templates/invalid_args.html
+++ b/templates/invalid_args.html
@@ -1,5 +1,5 @@
 {% extends 'error_base.html' %}
 
 {% block error_msg %}
-  No posee permisos para acceder a esta p&aacute;gina
+  Ocurrio&nacute; un error al validar los campos ingresados
 {% endblock %}
