--- a/templates/user_form_base.html
+++ b/templates/user_form_base.html
@@ -49,7 +49,8 @@
                   <div class="col-md-8">
                     Usuario:
                     <input id="username" name="username" type="text" placeholder="Usuario"
-                    value="{% block username_value %} {% endblock %}" class="form-control" required>
+                    value="{% block username_value %} {% endblock %}" class="form-control" required
+                    {% if username_disabled %} disabled {% endif %} >
                   </div>
                 </div>
               </fieldset>
@@ -69,7 +70,7 @@
               <div class="form-group">
                 <div class="col-md-12 text-center">
                 <input type="submit" class="btn btn-primary" id= "confirm_button" name="confirm_button" value="Confirmar">
-               
+
                 <input type="button" class="btn btn-danger" id= "cancel_button" name="cancel_button" onclick="return cancelar('users_index')"; value="Cancelar"></button>
                 </div>
               </div>
