--- a/templates/pacient_demographic_data.html
+++ b/templates/pacient_demographic_data.html
@@ -37,11 +37,11 @@
         {% elseif pacient.electricity == 0%}
           <td> NO </td>
         {% endif %}
-    <td>{{ pacient.heating_type }}</td>
-    <td>{{ pacient.home_type }}</td>
-    <td>{{ pacient.water_type }}</td>
+    <td>{{ referenceData.getHeatingTypeById(pacient.heating_type).description }}</td>
+    <td>{{ referenceData.getHomeTypeById(pacient.home_type).description }}</td>
+    <td>{{ referenceData.getWaterTypeById(pacient.water_type).description }}</td>
     <td>
-      <form action="./?action=pacient_form_update method="post">
+      <form action="./?action=pacient_form_update" method="post">
         <input type="submit" class="btn btn-primary" name="id" value="Modificar">
         <input type="hidden" name="id" id="id" value= "{{ pacient.id }}">
       </form>
