Se empezo a implementar la historia clinica del paciente.

--- a/private/templates/pacient_form_base.html
+++ b/private/templates/pacient_form_base.html
@@ -71,7 +71,7 @@ function validar(){
                 <div class="col-md-8">
                   Fecha de Nacimiento:
                     <input id="fecha_de_nacimiento" name="birth_date" type="date"
-                    value={% block birth_date_value %} {% endblock %} class="form-control" required>
+                    value=" {% block birth_date_value %} {% endblock %}" class="form-control" required>
                 </div>
               </div>
             </fieldset>
