--- a/private/templates/list_base.html
+++ b/private/templates/list_base.html
@@ -19,7 +19,7 @@
               <option> Bloqueados </option>
             </select>
 
-            <button type= "submit" class="btn btn-info"> Buscar <span class="glyphicon glyphicon-search"></span> </button>
+            &nbsp;<button type= "submit" class="btn btn-info"> Buscar <span class="glyphicon glyphicon-search"></span> </button>
           </form>
           &nbsp;
           <form action="{% block new_action %} {% endblock %}" method="post">
