--- a/private/templates/pacients_index.html
+++ b/private/templates/pacients_index.html
@@ -57,9 +57,9 @@
             </form>
           </td>
             <td>
-            <form action="./?action=pacient_clinical_history" method="post">
+            <form action="./?action=clinicalHistory_form_update" method="post">
               <input type="submit" class="btn btn-primary" value="Historia cl&iacute;nica" />
-              <input type="hidden" name="id" id="id" value= "{{ item.id }}">
+              <input type="hidden" name="id_paciente" id="id_paciente" value= "{{ item.id }}">
             </form>
           </td>
         </tr>
