Faltaban algunos templates. Se arreglaron algunas cosas en los controladores, modelos y vistas de historia clinica

--- a/private/templates/clinicalHistory_form_update.html
+++ b/private/templates/clinicalHistory_form_update.html
@@ -3,8 +3,8 @@
 
 
 <div id="div-top" align="center">
-<h1> Historia Cl&iacute;nica de {{ pacient.getFull_Name() }}</h1>
-<form action='./?action=clinical_history_updated'  method='post'>
+<h1> Historia Cl&iacute;nica de {{ clinicalHistory.getFull_Name() }}</h1>
+<form action='./?action=clinicalHistory_updated'  method='post'>
   <div class="container">
     <div class="row">
       <div align="left">
