--- a/private/templates/clinicalHistory_form_update.html
+++ b/private/templates/clinicalHistory_form_update.html
@@ -17,7 +17,7 @@
                 <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-user bigicon"></i></span>
                 <div class="col-md-8">
                   <font color="#EC2020" size= 4>* </font> Fecha de la consulta:
-                  <input id="fecha" name="fecha" type="date" value="{{ clinicalHistory.fecha }}" class="form-control" required>
+                  <input id="fecha" name="fecha" type="date" value="{{ clinicalHistory.fecha|date('Y-m-d') }}" class="form-control" required>
                 </div>
               </div>
             </fieldset>
