Hice un listado para la historia clinica, asi se ve reflejado los cambios que se va haciendo por fecha

--- a/private/templates/clinicalHistory_form_update.html
+++ b/private/templates/clinicalHistory_form_update.html
@@ -179,7 +179,7 @@
                 <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
                 <div class="col-md-8">
                   Observaciones generales:
-                    <input id="obs_generales" name="obs_generales" type="text" value="{{ clinicalHistory.obs_generales }}" class="form-control" required>
+                    <input id="obs_generales" name="obs_generales" type="text" value="{{ clinicalHistory.obs_generales }}" class="form-control">
                 </div>
               </div>
             </fieldset>
