--- a/private/templates/clinicalHistory_index.html
+++ b/private/templates/clinicalHistory_index.html
@@ -26,7 +26,7 @@
         </tr>
       </thead>
 
-      
+      {{ dump(historial) }}
       {% for item in historial %}
         <tr>
           <td>{{ item.fecha }}</td>
