reporte de pacientes por obra social

--- a/private/templates/plantilla_base.html
+++ b/private/templates/plantilla_base.html
@@ -12,12 +12,11 @@
     <script src="../private/js/scripts.js"></script>
     <!-- -->
 
-    {% block head%}
+    {% block head %}
     {% endblock %}
     <meta charset="UTF-8">
     <title>{{ config.title }}</title>
   </head>
-
 <body>
 
 <!-- <div>
@@ -52,6 +51,7 @@
             <li><a href="./?action=users_index">Usuarios</a> </li>
             <li><a href="#Roles">Roles</a> </li>
             <li><a href="#Permisos">Permisos</a> </li>
+            <li><a href="./?action=reportes">Reportes</a> </li>
             <li><a href="./?action=admin">Configuraci&oacute;n</a> </li>
           </ul>
         </li>
