--- a/private/templates/plantilla_base.html
+++ b/private/templates/plantilla_base.html
@@ -51,7 +51,7 @@
             <li><a href="./?action=users_index">Usuarios</a> </li>
             <li><a href="#Roles">Roles</a> </li>
             <li><a href="#Permisos">Permisos</a> </li>
-            <li><a href="./?action=reportes">Reportes</a> </li>
+            <li><a href="./?action=reports_index">Reportes</a> </li>
             <li><a href="./?action=admin">Configuraci&oacute;n</a> </li>
           </ul>
         </li>
