--- a/private/templates/pacient_form_update.html
+++ b/private/templates/pacient_form_update.html
@@ -1,5 +1,21 @@
 {% extends 'pacient_form_base.html' %}
 
+{% block head %}
+<script>
+$(document).ready(function() {
+  document.getElementById('gender').value = "{{ pacient.gender }}";
+  document.getElementById('doc_type').value = "{{ pacient.doc_type }}";
+  document.getElementById('id_medical_insurance').value = "{{ pacient.id_medical_insurance }}";
+  document.getElementById('has_refrigerator').value = "{{ pacient.has_refrigerator }}";
+  document.getElementById('has_electricity').value = "{{ pacient.has_electricity }}";
+  document.getElementById('has_pet').value = "{{ pacient.has_pet }}";
+  document.getElementById('home_type').value = "{{ pacient.home_type }}";
+  document.getElementById('heating_type').value = "{{ pacient.heating_type }}";
+  document.getElementById('water_type').value = "{{ pacient.water_type }}";
+});
+</script>
+{% endblock %}
+
 {% block header %}
 Actualizar Paciente
 {% endblock %}
