--- a/private/templates/plantilla_base.html
+++ b/private/templates/plantilla_base.html
@@ -39,10 +39,10 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="./?action=index"><span class="glyphicon glyphicon-home"></span> Inicio</a></li>
-        <li class="dropdown">
-
-      {% if session.IsLoggedIn %}
+      {% if session.isLoggedIn %}
         <li><a href="./?action=pacients_index">Pacientes</a></li>
+      {% endif %}
+      {% if session.isAdmin %}
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Administraci&oacute;n <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="./?action=users_index">Usuarios</a> </li>
@@ -52,7 +52,7 @@
             <li><a href="./?action=admin">Configuraci&oacute;n</a> </li>
           </ul>
         </li>
-      {% endif %}
+        {% endif %}
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
