--- a/private/templates/clinical_history_index.html
+++ b/private/templates/clinical_history_index.html
@@ -1,4 +1,4 @@
-{% extends 'plantilla_base.html' %}
+{% extends 'list_base.html' %}
 
 {% block header %} Historia clinica {% endblock %}
 {% block new_action %} ./?action=clinical_history_form_new {% endblock %}
