--- a/private/templates/clinical_history_index.html
+++ b/private/templates/clinical_history_index.html
@@ -4,7 +4,8 @@
 {% block new_action %} ./?action=clinical_history_form_new {% endblock %}
 {% block new_action_label %} Agregar una nueva modificacion {% endblock %}
 
-{% block body %}
+{% block inner_body %}
+
 
 
 
@@ -67,7 +68,7 @@
     </table>
   </div>
 </div>
-
+{% endblock %}
 
 
 
