--- a/private/templates/clinical_history_index.html
+++ b/private/templates/clinical_history_index.html
@@ -1,6 +1,6 @@
 {% extends 'list_base.html' %}
 
-{% block header %} Historia clinica {% endblock %}
+{% block head %} Historia clinica {% endblock %}
 {% block new_action %} ./?action=clinical_history_form_new {% endblock %}
 {% block new_action_label %} Agregar una nueva modificacion {% endblock %}
 
