--- a/private/templates/clinical_history_index.html
+++ b/private/templates/clinical_history_index.html
@@ -1,7 +1,7 @@
 {% extends 'list_base.html' %}
 
- {% block head %} Historia Clinica {% endblock %}
-{% block new_action %} ./?action=clinical_history_form_new {% endblock %}
+ {% block header %} Historia Clinica {% endblock %}
+{% block new_action %} ./?action=clinical_history_form_update {% endblock %}
 {% block new_action_label %} Agregar una nueva modificacion {% endblock %}
 
 {% block inner_body %}
