--- a/private/templates/clinical_history_index.html
+++ b/private/templates/clinical_history_index.html
@@ -1,8 +1,9 @@
 {% extends 'plantilla_base.html' %}
 
-{% block head %} Historia Clinica {% endblock %}
+
 {% block body %}
 
+<h1 align="center"> Historia Clinica </h1>
 <div class="container">
   <div class="table-responsive">
     <td>
